[package]
name = "git-tracker"
version = "0.3.1"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.15", features = ["derive"] }
dashmap = "6.0.1"
futures = "0.3.30"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "sqlite"] }
tempfile = "3.12.0"
tokio = { version = "1.39.2", features = ["full", "tracing"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
